--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,9 +6,9 @@
         <div class="footer center">
         <hr/>
         <ul>
-      	  <li><%= link_to (image_tag 'twitter3.png',size: "25x25"), "https://twitter.com/afrocuisines", :target => "_blank" %></li>
-          <li><%= link_to (image_tag 'facebook55.png', size: "25x25"), "https://www.facebook.com/pages/Afrocuisines", :target => "_blank" %></li>
-          <li><%= link_to (image_tag 'instagram15.png', size: "25x25"), "https://instagram.com/afrocuisines", :target => "_blank" %></li>
+      	  <li><%= link_to (image_tag 'twitter3.png',size: "25x25"), "https://twitter.com/", :target => "_blank" %></li>
+          <li><%= link_to (image_tag 'facebook55.png', size: "25x25"), "https://www.facebook.com/", :target => "_blank" %></li>
+          <li><%= link_to (image_tag 'instagram15.png', size: "25x25"), "https://instagram.com/", :target => "_blank" %></li>
       	</ul>
       		<p class="text-center lead">Copyright © 2015 Afrocuisines. All rights reserved.</p>
         </div>
